# poetry-semantic-release-test

./: CHANGELOG.md  README.md  pyproject.toml  time.txt
.github/workflows/: test.yml
poetry_semantic_release_test/: util.py
